...
import com.android.mygarden.ui.utils.OfflineMessages
import com.android.mygarden.ui.utils.handleOfflineClick

/** Contains all test tags used within the Add Friend screen UI. */
object AddFriendTestTags {

  const val SEARCH_TEXT = "searchText"
  const val SEARCH_BUTTON = "searchButton"
  const val FRIEND_COLUMN = "friendColumn"

  // Test tags that are Friend Card specific
  fun getTestTagForFriendCard(pseudo: String): String = "friendCardTestTag/${pseudo}"

  fun getTestTagForPseudoOnFriendCard(pseudo: String) = "pseudoOnFriendCardTestTag/${pseudo}"
...
